--- a/style/architects.css
+++ b/style/architects.css
@@ -124,7 +124,36 @@ font-weight: 500;
         margin-left:20px ;
     }
 }
+/* some fact related style */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+ 
+   
+}
+.fact-card{
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.fact-number{
+font-size:2.8rem ;
+font-weight: 500;
+margin-top: 5px;
+margin-bottom: 10px;
+}
 
+.fact-name{
+font-size:1.25rem ;
+margin-top: 10px;
+}
+.fact-description{
+max-width:540px ;
+}
 /* medium size device */
 @media screen  and (min-width: 576px) and (max-width: 992px){
     .teams{
