--- a/style/architects.css
+++ b/style/architects.css
@@ -47,8 +47,6 @@ main{
 main > section{
     margin-top: 130px;
 }
-/*  header styes*/
-
 
 /*  navbar related styles*/
 
@@ -108,22 +106,6 @@ margin-right: 30px;
 #quick list{
 font-weight: 500;
 }
-/* responsive media query */
-
-@media screen  and (max-width: 576px){
-    .navbar, 
-    .nav-links 
-    ,.teams{
-        flex-direction: column;
-    }
-    .item-img-container{
-        grid-template-columns: repeat(1 ,1fr);
-    }
-
-    .our-features{
-        margin-left:20px ;
-    }
-}
 /* some fact related style */
 .facts-container{
     display: grid;
@@ -154,6 +136,53 @@ margin-top: 10px;
 .fact-description{
 max-width:540px ;
 }
+
+/* sponsor related style */
+
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+
+
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies  img{
+    filter: grayscale(100%);
+}
+/* responsive media query */
+
+@media screen  and (max-width: 576px){
+    .navbar, 
+    .nav-links 
+    ,.teams{
+        flex-direction: column;
+    }
+    .item-img-container{
+        grid-template-columns: repeat(1 ,1fr);
+    }
+
+    .our-features{
+        margin-left:20px ;
+    }
+     .item-img-container ,
+     .facts-container,
+     .sponsor-companies{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .facts-container {
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-companies{
+       justify-items:center ;
+       gap: 50px; 
+    }
+}
+
 /* medium size device */
 @media screen  and (min-width: 576px) and (max-width: 992px){
     .teams{
@@ -162,4 +191,10 @@ max-width:540px ;
      .our-features{
         margin:50px  auto;
     }
+    .sponsor-companies ,.facts-container{
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
+    }
+   
 }
