--- a/style/architects.css
+++ b/style/architects.css
@@ -106,6 +106,30 @@ margin-right: 30px;
 #quick list{
 font-weight: 500;
 }
+
+/* feature section related style */
+.features{
+    gap: 100px;
+}
+#feature-section-title{
+    border-left: 5px solid #ff900e;
+   padding-left: 24px;
+   
+}
+.feature-card{
+     padding: 30px;
+    box-shadow:0 4px 30px 0 rgba(0,0,0,0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.feature-card  .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+   
+}
 /* some fact related style */
 .facts-container{
     display: grid;
